# dynarmic

./: CMakeLists.txt
src/backend_x64/: emit_x64.cpp
src/frontend/disassembler/: disassembler_arm.cpp
src/frontend/ir/: ir_emitter.cpp  ir_emitter.h  microinstruction.cpp
src/frontend/translate/translate_arm/: vfp2.cpp
